--- a/index.html
+++ b/index.html
@@ -2,38 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Notes</title>
+  <title>My Website</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    li {
-      margin: 10px 0;
-    }
-    a {
+    body { font-family: Arial, sans-serif; }
+    nav a {
+      margin-right: 15px;
       text-decoration: none;
-      color: #2980b9;
-      font-size: 18px;
+      color: blue;
     }
-    a:hover {
-      color: #e74c3c;
+    nav a:hover {
+      color: red;
     }
   </style>
 </head>
 <body>
-  <h1>📚 My Notes</h1>
-  <p>Chọn một mục để xem chi tiết:</p>
-  <ul>
-    <li><a href="likelihood.html">What is Likelihood?</a></li>
-    <li><a href="mle.html">Maximum Likelihood Estimation</a></li>
-  </ul>
+  <h1>Welcome to My Website</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="likelihood_mle.html">Likelihood + MLE</a>
+  </nav>
+
+  <p>This is the home page.</p>
 </body>
 </html>
