--- a/index.html
+++ b/index.html
@@ -2,26 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Website</title>
+  <title>My Notes</title>
   <style>
-    body { font-family: Arial, sans-serif; }
-    nav a {
-      margin-right: 15px;
-      text-decoration: none;
-      color: blue;
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
     }
-    nav a:hover {
-      color: red;
+    h1 {
+      color: #2c3e50;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px 0;
+    }
+    a {
+      text-decoration: none;
+      color: #2980b9;
+      font-size: 18px;
+    }
+    a:hover {
+      color: #e74c3c;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="likelihood_mle.html">Likelihood + MLE</a>
-  </nav>
-
-  <p>This is the home page.</p>
+  <h1>My Notes</h1>
+  <p>Choosing one for more detailed:</p>
+  <ul>
+    <li><a href="likelihood_mle.html">What is Likelihood and MLE?</a></li>
+  </ul>
 </body>
 </html>
