--- a/likelihood_mle.html
+++ b/likelihood_mle.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Likelihood + MLE</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
 
   <!-- MathJax để hiển thị công thức LaTeX -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
