--- a/likelihood_mle.html
+++ b/likelihood_mle.html
@@ -5,15 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Likelihood + MLE</title>
 
+  <!-- Import Roboto from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-    }
-  </style>
-
-  <!-- MathJax để hiển thị công thức LaTeX -->
+  <!-- MathJax to render LaTeX -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
@@ -21,9 +16,9 @@
 
   <style>
     body {
-      font-family: 'Merriweather', serif;
-      background-color: #ffffff;   /* nền trắng */
-      color: #222222;              /* chữ đen xám */
+      font-family: 'Roboto', sans-serif;
+      background-color: #ffffff;   /* white background */
+      color: #222222;              /* dark text */
       line-height: 1.7;
       max-width: 900px;
       margin: auto;
@@ -47,6 +42,7 @@
       padding: 10px;
       border-radius: 6px;
       overflow-x: auto;
+      margin: 1rem 0;
     }
   </style>
 </head>
