--- a/likelihood_mle.html
+++ b/likelihood_mle.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Likelihood + MLE</title>
 
-  <!-- Import Roboto from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- Import Open Sans from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <!-- MathJax to render LaTeX -->
+  <!-- MathJax for LaTeX -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
@@ -16,9 +16,9 @@
 
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Open Sans', sans-serif;
       background-color: #ffffff;   /* white background */
-      color: #222222;              /* dark text */
+      color: #222222;              /* dark gray text */
       line-height: 1.7;
       max-width: 900px;
       margin: auto;
@@ -42,7 +42,6 @@
       padding: 10px;
       border-radius: 6px;
       overflow-x: auto;
-      margin: 1rem 0;
     }
   </style>
 </head>
