--- a/likelihood_mle.html
+++ b/likelihood_mle.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Likelihood + MLE</title>
 
-  <!-- Import Open Sans from Google Fonts -->
+  <!-- Import Open Sans -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <!-- MathJax for LaTeX -->
+  <!-- MathJax -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
@@ -17,8 +17,8 @@
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
-      background-color: #ffffff;   /* white background */
-      color: #222222;              /* dark gray text */
+      background-color: #ffffff;
+      color: #222;
       line-height: 1.7;
       max-width: 900px;
       margin: auto;
@@ -26,15 +26,24 @@
     }
 
     h1, h2, h3 {
-      color: #111111;
+      color: #111;
+      margin-top: 1.5rem;
     }
 
-    a {
-      color: #0066cc;
-      text-decoration: none;
+    h1 {
+      font-size: 1.8rem;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.3rem;
     }
-    a:hover {
-      text-decoration: underline;
+
+    h2 {
+      font-size: 1.4rem;
+      margin-top: 1.2rem;
+    }
+
+    h3 {
+      font-size: 1.2rem;
+      margin-top: 1rem;
     }
 
     .math-block {
@@ -42,56 +51,66 @@
       padding: 10px;
       border-radius: 6px;
       overflow-x: auto;
+      margin: 0.8rem 0;
+    }
+
+    ol {
+      padding-left: 1.5rem;
     }
   </style>
 </head>
 <body>
 
   <a href="index.html">← Back to Home</a>
-  <h1>Likelihood & Maximum Likelihood Estimation (MLE)</h1>
+
+  <h1>What is Likelihood?</h1>
 
   <h2>Continuous Variables</h2>
 
   <p>
-    For a <b>discrete random variable</b>, the probability of \(X\) taking a specific value \(x\) is:
+    For a <b>discrete random variable</b>, we can represent the probability of \(X\) taking a specific value \(x\) as
   </p>
 
   <div class="math-block">
     \[
-    P(X = x)
+    P(X = x),
     \]
   </div>
 
   <p>
-    For a <b>continuous random variable</b>, the probability that \(X\) equals exactly one value is:
+    which can take any value in \([0,1]\).
+  </p>
+
+  <p>
+    However, for a <b>continuous random variable</b>, the probability that \(X\) equals exactly one point is essentially zero:
   </p>
 
   <div class="math-block">
     \[
-    P(X = x) = 0
+    P(X = x) = 0.
     \]
   </div>
 
   <p>
-    Instead, we describe probabilities over an <i>interval</i>:
+    Instead, we describe probabilities over an <em>interval</em>:
   </p>
 
   <div class="math-block">
     \[
-    P(x_1 \leq X \leq x_2)
+    P(x_1 \leq X \leq x_2).
     \]
   </div>
 
   <p>
-    To compute such probabilities, we introduce the <b>Probability Density Function (pdf)</b> \(f(x)\), which satisfies:
+    To compute such probabilities, we introduce the <b>Probability Density Function (pdf)</b> \(f(x)\), which satisfies the following properties:
   </p>
 
   <ol>
     <li>
-      For any interval \([x_1, x_2]\):
+      For any interval \([x_1, x_2]\),
       <div class="math-block">
         \[
-        P(x_1 \leq X \leq x_2) = \int_{x_1}^{x_2} f(x)\,dx
+        P(x_1 \leq X \leq x_2) = \int_{x_1}^{x_2} f(x)\,dx.
         \]
       </div>
     </li>
@@ -99,53 +118,48 @@
       For all \(x\), \(f(x) \geq 0\), and
       <div class="math-block">
         \[
-        \int_{-\infty}^{\infty} f(x)\,dx = 1
+        \int_{-\infty}^{\infty} f(x)\,dx = 1.
         \]
       </div>
     </li>
   </ol>
 
   <p>
-    Suppose we observe \(n\) independent samples \(x_1, x_2, \dots, x_n\) from the same distribution.  
-    The joint density is
+    In other words, the probability of \(X\) falling within an interval is given by the 
+    <b><em>area under the curve</em></b> of \(f(x)\) across that interval.
+  </p>
+
+  <p>
+    Since \(f(x) \geq 0\) everywhere, this interpretation is always consistent: if \(f(x)\) is small, the corresponding area (and hence probability) will also be small, and if \(f(x)\) is large, the area will be larger.
+  </p>
+
+  <p>
+    Now, suppose we observe \(n\) independent samples \(x_1, x_2, \dots, x_n\) from the same distribution with pdf \(f(x)\). The joint probability density of these samples is
   </p>
 
   <div class="math-block">
     \[
-    P(X_1 = x_1, \dots, X_n = x_n) \propto \prod_{i=1}^n f(x_i)
+    P(X_1 = x_1, \dots, X_n = x_n) \propto \prod_{i=1}^n f(x_i).
     \]
   </div>
 
   <p>
-    This product is called the <b>Likelihood Function</b>:
+    This product is called the <b>Likelihood Function</b>, and it plays a central role in parameter estimation:
   </p>
 
   <div class="math-block">
     \[
-    L(\theta) = \prod_{i=1}^n f(x_i \mid \theta)
-    \]
-  </div>
-
-  <h2>Maximum Likelihood Estimation (MLE)</h2>
-  <p>
-    The idea of MLE is to find the parameter \(\theta\) that maximizes the likelihood function:
-  </p>
-
-  <div class="math-block">
-    \[
-    \hat{\theta}_{MLE} = \arg\max_{\theta} L(\theta)
+    L(\theta) = \prod_{i=1}^n f(x_i \mid \theta),
     \]
   </div>
 
   <p>
-    Often, it’s easier to maximize the <b>log-likelihood</b>:
+    where \(\theta\) denotes the parameter(s) of the pdf \(f\).
   </p>
 
-  <div class="math-block">
-    \[
-    \ell(\theta) = \log L(\theta) = \sum_{i=1}^n \log f(x_i \mid \theta)
-    \]
-  </div>
+  <h2>The meaning of Likelihood Function</h2>
+
+  <h2>The meaning of Maximum Likelihood Estimation</h2>
 
 </body>
 </html>
